<resources>
    <string name="app_name">Find&amp;Share\nParking</string>
    <string name="connect">Connect</string>
    <string name="login_to_your_n_account">Login To Your\nAccount</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">LOGIN</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register">Register</string>
    <string name="meet_up">MEET UP</string>
    <string name="full_name">Full Name</string>
    <string name="create_nan_account">Create\nan Account</string>
    <string name="search">Search</string>
    <string name="add_post">add post</string>
    <string name="_0">0</string>
    <string name="like">Like</string>
    <string name="parking_picture">Parking picture</string>
    <string name="user_picture">user picture</string>
    <string name="icon_like">icon like</string>
    <string name="navigate">Navigate</string>
    <string name="post">Post</string>
    <string name="disabled">Disabled</string>
    <string name="baby">Baby</string>
    <string name="more_info">More Info</string>
    <string name="other">Other</string>
    <string name="share_empty_parking">Share Empty \nParking</string>
    <string name="enter_location">Enter Location</string>
    <string name="icon_camera">icon camera</string>
    <string name="notification">Notification</string>
    <string name="my_post">My Post</string>
    <string name="news_Feed">News Feed</string>
    <string name="more">More</string>
    <string name="like_post">like your post</string>
    <string name="All">All</string>
    <string name="already_account">There is already a user with this email address</string>
    <string name="invalid_email">Invalid Email address</string>
    <string name="name_required">Name required</string>
    <string name="email_required">Email required</string>
    <string name="password_required">Requires at least 6 characters</string>
    <string name="finger_print">finger Print</string>
    <string name="authentication_failed">Authentication_failed</string>
    <string name="log_in">Login</string>
    <string name="use_finger_print">Use Your FingerPrint To Login Your Account</string>
    <string name="cancel">Cancel</string>
    <string name="take_photo_again">Take photo again</string>
    <string name="remove_like_not_recorded">\"Remove Like has not been recorded \"</string>
    <string name="location_required">Location required</string>
    <string name="image_required">Image required</string>
    <string name="here">Here</string>
    <string name="arrow">arrow</string>
    <string name="edit">Edit</string>
    <string name="join_our_great_community">Join our great community</string>
    <string name="find_or_share_empty_parking">find or share empty parking</string>
</resources>