<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:gravity="center"
    android:orientation="vertical">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/meet_up"
        android:textColor="@color/orange"
        android:textSize="60sp"
        android:textStyle="bold" />

    <View
        android:layout_width="130dp"
        android:layout_height="10dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_corner" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/join_our_great_community"
        android:textColor="@color/orange"
        android:textSize="20sp"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/find_or_share_empty_parking"
        android:textColor="@color/orange"
        android:textSize="20sp"

        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mainLoginInBtn"
        style="@style/MyButtonFill"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:padding="20dp"
        android:text="@string/login"
        android:textSize="20sp"

        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/registerPress"
        style="@style/MyButtonTransparent"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:padding="20dp"
        android:text="@string/register"
        android:textSize="20sp" />


</LinearLayout>