<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:padding="20dp"
    tools:context=".activity.FirstActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/emailLogin"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="10dp"
        android:text="@string/login_to_your_n_account"
        android:textColor="#FF8C00"
        android:textSize="30sp"
        android:textStyle="bold" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginBtn"
        style="@style/MyButtonFill"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:padding="20dp"
        android:text="@string/login"
        android:textSize="20sp"

        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailLogin"
        style="@style/myTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:hint="@string/email"
        android:theme="@style/TextInputLayoutAppearance"
        app:errorEnabled="true"
        app:hintTextColor="#ef8354"
        app:startIconDrawable="@drawable/email"
        app:startIconTint="@color/orange">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:textColor="@color/orange"
            app:startIconDrawable="@drawable/email" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordLogin"
        style="@style/myTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/emailLogin"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:hint="@string/password"
        android:textColorHighlight="@color/orange"
        android:textColorHint="@color/orange"
        android:theme="@style/TextInputLayoutAppearance"
        app:errorEnabled="true"
        app:hintTextColor="#ef8354"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/orange"
        app:startIconDrawable="@drawable/asterisk"
        app:startIconTint="@color/orange">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="@color/orange" />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/fingerPrintBtn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_above="@id/loginBtn"
        android:layout_below="@id/passwordLogin"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/finger_print"
        android:src="@drawable/finger_print" />

    <ProgressBar
        android:id="@+id/progressBarLogIn"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_above="@+id/loginBtn"
        android:layout_below="@+id/passwordLogin"
        android:layout_centerHorizontal="true"
        android:indeterminateTint="@color/orange"
        android:visibility="invisible" />


</RelativeLayout>