<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/fullName"
        android:layout_alignParentStart="true"
        android:text="@string/create_nan_account"
        android:textColor="#FF8C00"
        android:textSize="30sp"
        android:textStyle="bold" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fullName"
        style="@style/myTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/emailRegister"
        android:layout_centerInParent="true"
        android:hint="@string/full_name"
        android:theme="@style/TextInputLayoutAppearance"
        app:errorEnabled="true"
        app:hintTextColor="@color/orange"
        app:startIconDrawable="@drawable/person"
        app:startIconTint="@color/orange">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:textColor="@color/orange" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailRegister"
        style="@style/myTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:hint="@string/email"
        android:theme="@style/TextInputLayoutAppearance"
        app:errorEnabled="true"
        app:hintTextColor="@color/orange"
        app:startIconDrawable="@drawable/email"
        app:startIconTint="@color/orange">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:textColor="@color/orange" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordRegister"
        style="@style/myTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/emailRegister"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:hint="@string/password"
        android:textColorHint="@color/orange"
        android:theme="@style/TextInputLayoutAppearance"
        app:errorEnabled="true"
        app:hintTextColor="@color/orange"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/orange"
        app:startIconDrawable="@drawable/asterisk"
        app:startIconTint="@color/orange">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="@color/orange" />

    </com.google.android.material.textfield.TextInputLayout>


    <ProgressBar
        android:id="@+id/progressBarRegister"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_above="@+id/createAccount"
        android:layout_below="@+id/passwordRegister"
        android:layout_centerHorizontal="true"
        android:indeterminateTint="@color/orange"
        android:visibility="invisible" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/createAccount"
        style="@style/MyButtonFill"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:padding="20dp"
        android:text="@string/register"
        android:textSize="20sp"

        />

</RelativeLayout>